Update TODO file
Recommendations say call to POL_LoadVar_PROGRAMFILES is unnecessary

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,10 +2,12 @@ Outcast-gog:
 	Rewrite i18n with eval_gettext
 	Add INI tweaks? Need tool to manipulate INI files
 	Add $NAME/$EXPECTED_NAME to archive check
+	Remove POL_LoadVar_PROGRAMFILES
 
 Outcast-gog-zenger-hires-patch:
 	Rewrite i18n with eval_gettext
 	Check unzip is present
 	Add $NAME/$EXPECTED_NAME to archive check
 	Use registry instead of pol_settings file
+	Remove POL_LoadVar_PROGRAMFILES
 	
