--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 Outcast-gog:
 	Rewrite i18n with eval_gettext
-	Add INI tweaks? Need tool to manipulate INI files
 	Add $NAME/$EXPECTED_NAME to archive check
 	Remove POL_LoadVar_PROGRAMFILES
 
@@ -8,6 +7,7 @@ Outcast-gog-zenger-hires-patch:
 	Rewrite i18n with eval_gettext
 	Check unzip is present
 	Add $NAME/$EXPECTED_NAME to archive check
-	Use registry instead of pol_settings file
+	Use registry instead of pol_settings file?
 	Remove POL_LoadVar_PROGRAMFILES
-	
+        Skip question if patch not present anymore (reinstall)
+
